增加商品和分类模块
