# docs/swagger.yaml
@@ -7,6 +7,18 @@ definitions:
       message:
         type: string
     type: object
+  dto.CategroyRes:
+    properties:
+      category_id:
+        description: ID of the CategoryID
+        type: integer
+      description:
+        description: Description of the CategoryID
+        type: string
+      name:
+        description: Name of the CategoryID
+        type: string
+    type: object
   dto.Code:
     enum:
     - 0
@@ -80,6 +92,30 @@ definitions:
     - password
     - username
     type: object
+  dto.ProductRes:
+    properties:
+      product_category_id:
+        description: Category ID of the ProductID
+        type: integer
+      product_category_name:
+        description: Category Name of the ProductID
+        type: string
+      product_desc:
+        description: Description of the ProductID
+        type: string
+      product_id:
+        description: ID of the ProductID
+        type: integer
+      product_image:
+        description: Image URL of the ProductID
+        type: string
+      product_name:
+        description: Name of the ProductID
+        type: string
+      product_price:
+        description: Price of the ProductID
+        type: number
+    type: object
   dto.RegisterUserReq:
     properties:
       email:
@@ -136,6 +172,60 @@ info:
   title: Gin 3at
   version: "1.0"
 paths:
+  /categories:
+    get:
+      consumes:
+      - application/json
+      description: Get all Categories
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: List of categories
+          schema:
+            items:
+              $ref: '#/definitions/dto.CategroyRes'
+            type: array
+        "500":
+          description: Failed to retrieve categories
+          schema:
+            $ref: '#/definitions/dto.APIResponse'
+      summary: Get All GetAllCategories
+      tags:
+      - Category
+  /categories/{category_id}:
+    get:
+      consumes:
+      - application/json
+      description: Get a category by its Is
+      parameters:
+      - description: Category ID
+        in: path
+        name: category_id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Category retrieved successfully
+          schema:
+            $ref: '#/definitions/dto.CategroyRes'
+        "400":
+          description: Invalid request parameters
+          schema:
+            $ref: '#/definitions/dto.APIResponse'
+        "404":
+          description: Category not found
+          schema:
+            $ref: '#/definitions/dto.APIResponse'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/dto.APIResponse'
+      summary: Get Category by Is
+      tags:
+      - Category
   /orders:
     post:
       consumes:
@@ -165,6 +255,60 @@ paths:
       summary: Create a new order
       tags:
       - orders
+  /products:
+    get:
+      consumes:
+      - application/json
+      description: Get all Products
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: List of products
+          schema:
+            items:
+              $ref: '#/definitions/dto.ProductRes'
+            type: array
+        "500":
+          description: Failed to retrieve products
+          schema:
+            $ref: '#/definitions/dto.APIResponse'
+      summary: Get All Products
+      tags:
+      - Product
+  /products/{product_id}:
+    get:
+      consumes:
+      - application/json
+      description: Get a product by its IsDefault
+      parameters:
+      - description: Product ID
+        in: path
+        name: product_id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Product retrieved successfully
+          schema:
+            $ref: '#/definitions/dto.ProductRes'
+        "400":
+          description: Invalid request parameters
+          schema:
+            $ref: '#/definitions/dto.APIResponse'
+        "404":
+          description: Product not found
+          schema:
+            $ref: '#/definitions/dto.APIResponse'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/dto.APIResponse'
+      summary: Get Product by Is
+      tags:
+      - Product
   /user/login:
     post:
       consumes:
