# internal/model/product.go
@@ -1,6 +1,9 @@
 package model
 
-import "gorm.io/gorm"
+import (
+	e "github.com/n3xtchen/gin-3at/internal/domain/entity"
+	"gorm.io/gorm"
+)
 
 type Product struct {
 	gorm.Model
@@ -11,4 +14,30 @@ type Product struct {
 	Stock       int      `gorm:"not null"`                            // 商品库存
 	CategoryID  uint     `gorm:"not null"`                            // 商品分类ID
 	Category    Category `gorm:"foreignKey:CategoryID;references:ID"` // 商品分类
+}
+
+func (model Product) ToEntity() e.Product {
+	return e.Product{
+		ID:          int(model.ID),
+		Name:        model.Name,
+		Description: model.Description,
+		Price:       model.Price,
+		ImageURL:    model.ImageURL,
+		Stock:       model.Stock,
+		CategoryID:  int(model.CategoryID),
+		Category:    model.Category.ToEntity(), // Category should be set separately
+	}
+}
+
+func FromEntityProduct(entity *e.Product) *Product {
+	return &Product{
+		Model:       gorm.Model{ID: uint(entity.ID)},
+		Name:        entity.Name,
+		Description: entity.Description,
+		Price:       entity.Price,
+		ImageURL:    entity.ImageURL,
+		Stock:       entity.Stock,
+		CategoryID:  uint(entity.CategoryID),
+		// Category will be set separately if needed
+	}
 }
